# test-task-for-dooverTech

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
accounts/: admin.py  models.py  signals.py
accounts/api/: mixins.py  serializers.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
admintools/: models.py
bonuses/: admin.py  models.py
bonuses/migrations/: 0001_initial.py
carts/: admin.py  models.py
carts/api/: serializers.py  urls.py  views.py
carts/migrations/: 0001_initial.py
config/: settings.py  urls.py  yasg.py
orders/: admin.py  models.py  services.py
orders/api/: serializers.py  urls.py  views.py
orders/migrations/: 0001_initial.py
products/: admin.py  models.py
products/api/: serializers.py  urls.py  views.py
products/migrations/: 0001_initial.py
reviews/: admin.py  models.py  tasks.py
reviews/api/: serializers.py  urls.py  views.py
reviews/migrations/: 0001_initial.py
reviews/scripts/: check_reviews.py
src/config/: settings.py  urls.py
src/profiles/: models.py
src/profiles/api/: serializers.py  urls.py  views.py
src/profiles/migrations/: 0001_initial.py
templates/payment/: process.html
wishlist/: admin.py  models.py
wishlist/api/: serializers.py  urls.py  views.py
wishlist/migrations/: 0001_initial.py
