[tool.poetry]
name = "test-task-for-doovertech"
version = "0.1.0"
description = ""
authors = ["Ernur Eskermes <eskermesernur86@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.8"
djangorestframework = "^3.12.4"
Pillow = "^8.4.0"
djangorestframework-simplejwt = "^5.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
